# simple-online-game

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
docs/: sequence_diagram.txt
src/: Application.cpp  Application.hpp  AssetManager.cpp  AssetManager.hpp  Scene.cpp  Scene.hpp  assert.hpp  debug.hpp  logging.cpp  logging.hpp  main.cpp
src/game/: Base.cpp  Base.hpp  Enemy.cpp  Enemy.hpp  Fireball.cpp  Fireball.hpp  GameWorld.cpp  GameWorld.hpp  HealthBar.cpp  HealthBar.hpp  Level.cpp  Level.hpp  Player.cpp  Player.hpp  player.cpp  player.hpp
src/network/: client.cpp  client.hpp  network.hpp  packet.cpp  packet.hpp  packet_impl.hpp  server.cpp  server.hpp  socket.cpp  socket.hpp
src/ui/: ui.cpp  ui.hpp
